--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,76 @@
   font-family: sans-serif;
   text-align: center;
 }
+.horizontal {
+  text-align: center;
+  border: 1px solid rgb(178, 66, 66);
+  border-radius: 8px;
+  height: 100%;
+  display: flex;
+}
+#sub {
+  color: #b24242;
+  display: block;
+  line-height: 40px;
+  text-decoration: none;
+  text-align: center;
+  border: none;
+  background-color: #fff;
+  font-size: 21px;
+  font-weight: 900;
+  width: 60px;
+  height: 56px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+}
+#val {
+  background-color: #fbe8e8;
+  color: #b24242;
+  display: block;
+  line-height: 40px;
+  text-decoration: none;
+  border: none;
+  text-align: center;
+  width: 60px;
+  height: 56px;
+}
+#add {
+  background-color: #b24242;
+  color: #fff;
+  display: block;
+  line-height: 40px;
+  text-decoration: none;
+  border: none;
+  text-align: center;
+  font-size: 21px;
+  font-weight: 900;
+  width: 60px;
+  height: 56px;
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
+}
+.container {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.middle {
+  background-color: transparent;
+  border: 0px solid;
+  height: 20px;
+  width: 30px;
+  color: rgb(170, 29, 29);
+}
+.aboveCounter {
+  text-align: center;
+
+  margin-bottom: 5px;
+  height: 16px;
+  font-size: 12px;
+  font-weight: 500;
+}
+.disappear {
+  display: none;
+}
